# rwhaskell

./: .gitignore  README.md  rwhaskell.cabal
src/: ch03_exercises.hs
src/ch04/: FirstWord.hs  FixLines.hs  InteractWith.hs  Plus.hs  SplitLines.hs  TransposeLines.hs  exercises.hs  gpl-3.0.words
src/ch05/: Main.hs  PutJSON.hs  SimpleJSON.hs
