name:                rwhaskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ptillemans/rwhaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Tillemans
maintainer:          pti@snamellit.com
copyright:           Copyright: (c) 2018 Peter Tillemans
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable rwhaskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
